--- a/Tapşırıq 1/index.html
+++ b/Tapşırıq 1/index.html
@@ -8,5 +8,12 @@
   <body>
     <h1>HELLO</h1>
     <h2>HELLO 2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit debitis sed minus voluptas quos facilis? Delectus assumenda facere atque, deserunt animi sed architecto cumque id quidem numquam veniam, culpa quod!</p>
+    <h3>HEllo</h3>
+    <span>salam</span>
+    <b>salam</b>
+    <u>
+        salam
+    </u>
   </body>
 </html>
